# picoROM

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.hpp.in
libs/xmodem/: CMakeLists.txt
libs/xmodem/xmodem/: xmodem.c  xmodem.h
src/: main.cpp  pin_definitions.hpp  rom_bus.cpp  rom_bus.hpp  utils.cpp  utils.hpp
